added listing for boards and tasks for logged in user

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block content %}
+{% block auth_stuff %}
     {% if form.errors %}
             <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
