--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block content %}
+{% block auth_stuff %}
   <h1>The password has been changed!</h1>
   <p><a href="{% url 'login' %}">log in again?</a></p>
 {% endblock %}
