--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base_generic.html" %}
+{% block content %}
+    {# <form class="form-inline" action="" method="post"> #}
+    {# {% csrf_token %} #}
+    {# <label for="list_task" class="my-1 mr-2">List Name</label> #}
+    {#  <input type="text" class="form-control mr-2" id="list_task"> #}
+    {# <button type="submit" class="btn btn-outline-secondary">Add List</button> #}
+    {#    </form> #}
+    <div>
+        {% for key, value in todo_dict.items %}
+           <ul class="list-group">
+               <li class="list-group-item list-group-item-dark">{{ key }}</li>
+                {% for task in value %}
+                    <li class="list-group-item">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="{{ task.id }}">
+                        <label class="custom-control-label" for="{{ task.id }}"
+                               style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
+                    </div>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endfor %}
+    </div>
+{% endblock %}
