--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,11 +1,11 @@
 {% extends "base_generic.html" %}
 {% block content %}
-    {# <form class="form-inline" action="" method="post"> #}
-    {# {% csrf_token %} #}
-    {# <label for="list_task" class="my-1 mr-2">List Name</label> #}
-    {#  <input type="text" class="form-control mr-2" id="list_task"> #}
-    {# <button type="submit" class="btn btn-outline-secondary">Add List</button> #}
-    {#    </form> #}
+    <form class="form-inline" action="" method="post">
+    {% csrf_token %}
+        {{ form }}
+        <button type="submit" class="btn btn-outline-secondary">Add List</button>
+    </form>
+    <br>
     <div>
         {% for key, value in todo_dict.items %}
            <ul class="list-group">
