moved code for adding a board to add_board function in views

--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,24 +1,32 @@
 {% extends "base_generic.html" %}
 {% block content %}
-    <form class="form-inline" action="" method="post">
-    {% csrf_token %}
-        {{ form }}
+    <form class="form-inline" action="{% url 'add_board' %}" method="post">
+        {% csrf_token %}
+        {{ board_form }}&nbsp;
         <button type="submit" class="btn btn-outline-secondary">Add List</button>
     </form>
     <br>
     <div>
         {% for key, value in todo_dict.items %}
-           <ul class="list-group">
-               <li class="list-group-item list-group-item-dark">{{ key }}</li>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-dark">{{ key }}</li>
+                <li class="list-group-item">
+                    <form class="form-inline" action="" method="post">
+                    {% csrf_token %}
+                        {{ task_form_set.0 }}&nbsp;
+                        <button class="btn btn-outline-secondary" type="submit" id="button-addon1">+</button>
+                    </form>
+                </li>
                 {% for task in value %}
                     <li class="list-group-item">
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="{{ task.id }}">
-                        <label class="custom-control-label" for="{{ task.id }}"
-                               style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
-                    </div>
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="{{ task.id }}">
+                            <label class="custom-control-label" for="{{ task.id }}"
+                                   style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
+                        </div>
                     </li>
                 {% endfor %}
+
             </ul>
         {% endfor %}
     </div>
