modified code for checkboxes to submit when pressed. found and fixed a bug in creating a new task

--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -19,7 +19,10 @@
                 {% for task in value %}
                     <li class="list-group-item">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="{{ task.id }}">
+                            <form class="form-inline" action="{% url 'check' pk=task.id %}" method="post">
+                                {% csrf_token %}
+                                <input type="submit" class="custom-control-input" id="{{ task.id }}">
+                            </form>
                             <label class="custom-control-label" for="{{ task.id }}"
                                    style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
                         </div>
