--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -29,4 +29,5 @@
     </form>
     {# "{% url 'password_reset' %}" add this after you setup view function #}
     <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+    <p><a href="{% url 'signup' %}">Create a new account</a> </p>
 {% endblock %}
