modified block name auth_stuff for registration templates

--- a/todolist/templates/base_generic.html
+++ b/todolist/templates/base_generic.html
@@ -35,7 +35,7 @@
     {% endblock %}
 </div>
 <div class="center">
-    {% block auth_stuff %}{% endblock %}
+    {% block authentication_block %}{% endblock %}
 </div>
 <div class="content">
     {% block content %}{% endblock %}
