--- a/todolist/templates/signup.html
+++ b/todolist/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base_generic.html' %}
 
-{% block content %}
+{% block authentication_block %}
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
