--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block auth_stuff %}
+{% block authentication_block %}
     {% if form.errors %}
             <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
