--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {%  extends "base_generic.html" %}
 
-{% block auth_stuff %}
+{% block authentication_block %}
 
     {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
