--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block auth_stuff %}
+{% block authentication_block %}
     <form action="" method="post">
         {% csrf_token %}
         {% if form.email.errors %}
