--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -5,24 +5,27 @@
         {{ board_form }}
         <button type="submit" class="btn btn-outline-secondary">Add List</button>
     </form>
-    {#<form class="form-inline" action="{% url 'add_task' %}" method="post"> #}
-    {#  {% csrf_token %} #}
-    {#  {{ task_form }}&nbsp; #}
-    {#   <button class="btn btn-outline-secondary" type="submit">Add Task</button> #}
-    {# </form> #}
     <br>
     <div>
         {% for key, value in todo_dict.items %}
             <ul class="list-group">
                 <li class="list-group-item list-group-item-dark">
-                    <form class="form-inline" action="{% url 'delete_board' pk=key.id %}" method="post">
+
+                    <form action="{% url 'delete_board' pk=key.id %}" method="post">
                         {% csrf_token %}
                         {{ key.name }}
+
                         <button type="submit" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </form>
+
+                    <button type="button" class="btn btn-outline-light float-right" data-toggle="modal"
+                            data-target="#shareModal">
+                        Share
+                    </button>
                 </li>
+
                 <li class="list-group-item">
                     <form class="form-inline" action="{% url 'add_task' pk=key.id %}" method="post">
                         {% csrf_token %}
@@ -42,7 +45,7 @@
                             <form action="{% url 'delete_task' pk=task.id %}" method="post">
                                 {% csrf_token %}
                                 <label class="custom-control-label" for="{{ task.id }}"
-                                   style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
+                                       style="{% if task.done %}text-decoration: line-through;{% endif %}">{{ task.action }}</label>
                                 <button type="submit" class="close" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -52,5 +55,25 @@
                 {% endfor %}
             </ul>
         {% endfor %}
+    </div>
+    <div class="modal fade" id="shareModal" tabindex="-1" role="dialog"
+         aria-labelledby="shareModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="shareModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Am ajuns aici
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
