added dropdown to modal

--- a/todolist/static/css/styles.css
+++ b/todolist/static/css/styles.css
@@ -12,3 +12,15 @@
 .topbar {
     margin-top: 5px;
 }
+
+.dropdown-item{
+  white-space : nowrap;
+}
+.dropdown-item .text {
+  word-wrap:break-word;
+}
+.dropdown-menu.show{
+  min-width:100%!important;
+  width:100%!important;
+
+}
