--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -20,9 +20,10 @@
                         </button>
                     </form>
 
-                    <button type="button" class="btn btn-outline-light float-right" data-toggle="modal"
-                            data-target="#shareModal">
-                        Share
+                    <button type="button" class="btn btn-outline-light float-right share" data-toggle="modal"
+                            data-target="#shareModal" onclick="$('.share').click(function(){
+                    $('#boardID').val($(this).data('id'));})">
+                    Share
                     </button>
                 </li>
 
@@ -58,20 +59,30 @@
     </div>
     <div class="modal fade" id="shareModal" tabindex="-1" role="dialog"
          aria-labelledby="shareModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="shareModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="shareModalLabel">Share Board</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="btn-group dropright">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Share with
                     </button>
-                </div>
-                <div class="modal-body">
-                    Am ajuns aici
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        {% for friend in friends %}
+                            <a class="dropdown-item"
+                               href="{% url 'share_board' friend_id=friend.id %}">{{ friend.friend.username }}</a>
+                        {% endfor %}
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
