--- a/todolist/templates/base_generic.html
+++ b/todolist/templates/base_generic.html
@@ -7,7 +7,8 @@
     <title>Title</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-
+    {% block scripts %}
+    {% endblock %}
 </head>
 <body>
 <div class="topbar">
