--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,4 +1,15 @@
 {% extends "base_generic.html" %}
+{% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("button[data-target='#shareModal']").click(function () {
+                $("#boardID").val($(this).data('board-id'));
+            });
+        });
+    </script>
+{% endblock %}
 {% block content %}
     <form class="form-inline" action="{% url 'add_board' %}" method="post">
         {% csrf_token %}
@@ -20,10 +31,9 @@
                         </button>
                     </form>
 
-                    <button type="button" class="btn btn-outline-light float-right share" data-toggle="modal"
-                            data-target="#shareModal" onclick="$('.share').click(function(){
-                    $('#boardID').val($(this).data('id'));})">
-                    Share
+                    <button data-board-id="{{ key.id }}" type="button" class="btn btn-outline-light float-right share" data-toggle="modal"
+                            data-target="#shareModal">
+                        Share
                     </button>
                 </li>
 
@@ -59,32 +69,37 @@
     </div>
     <div class="modal fade" id="shareModal" tabindex="-1" role="dialog"
          aria-labelledby="shareModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="shareModalLabel">Share Board</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="btn-group dropright">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Share with
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="shareModalLabel">Share Board</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        {% for friend in friends %}
-                            <a class="dropdown-item"
-                               href="{% url 'share_board' friend_id=friend.id %}">{{ friend.friend.username }}</a>
-                        {% endfor %}
+                </div>
+                <form method="post" action="{% url 'share_board' %}">
+
+                    <div class="modal-body">
+                        <div>
+                            <input readonly="readonly" id="boardID" type="hidden" name="board_id"/>
+                        </div>
+                        {% csrf_token %}
+                        <label class="my-1 mr-2" for="inlineFormSelectPref">Share board with</label>
+                        <select class="custom-select my-1 mr-sm-2" id="inlineFormSelectPref">
+                            {% for friend in friends %}
+                                <option>{{ friend.friend.username }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
-                </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Share</button>
+                    </div>
+                </form>
+
             </div>
         </div>
     </div>
+
 {% endblock %}
