add userimages model and add background to base_generic template

--- a/todolist/templates/base_generic.html
+++ b/todolist/templates/base_generic.html
@@ -10,7 +10,8 @@
     {% block scripts %}
     {% endblock %}
 </head>
-<body>
+<body style="background-image: url('{{ background.image.url }}'); background-size: auto; background-position: 30% 30%">
+
 <div class="topbar">
     {% block topbar %}
         <ul class="nav justify-content-end">
