--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,4 +1,5 @@
 {% extends "base_generic.html" %}
+
 {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -31,7 +32,9 @@
                         </button>
                     </form>
 
-                    <button data-board-id="{{ key.id }}" type="button" class="btn btn-outline-light float-right share" data-toggle="modal"
+                    <button data-board-id="{{ key.id }}" type="button"
+                            class="btn btn-outline-light float-right share"
+                            data-toggle="modal"
                             data-target="#shareModal">
                         Share
                     </button>
@@ -97,5 +100,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
