--- a/todolist/templates/set_background_form.html
+++ b/todolist/templates/set_background_form.html
@@ -4,13 +4,17 @@
     <div>
         <div class="card-group">
             {% for image in images %}
-                <div class="card">
-                    <img class="card-img-top" src="{{ image.image.url }}" alt="{{ image.image.title }}">
-
-                </div>
+                <ul>
+                    <li>
+                        <a href="{% url 'select_background' image.id %}">
+                            <img class="custom-img" src="{{ image.image.url }}" alt="{{ image.image.title }}">
+                        </a>
+                    </li>
+                </ul>
             {% endfor %}
         </div>
-        <form class="form-inline custom-form" action="{% url 'set_background' %}" method="post">
+        <form class="form-inline custom-form" action="{% url 'set_background' %}" method="post"
+              enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="input-group-text" type="submit">+</button>
