modified style for lists alignment

--- a/todolist/static/css/styles.css
+++ b/todolist/static/css/styles.css
@@ -62,7 +62,11 @@ div.custom-form {
 img.custom-img{
     width: 20em;
 }
-ul{
+ul.images-list{
     list-style-type:none;
     text-align: center;
+}
+li.title-list{
+    text-align: center;
+
 }
