--- a/todolist/templates/profile.html
+++ b/todolist/templates/profile.html
@@ -5,7 +5,7 @@
             <div class="wrapper_board">
 
                 <ul class="list-group">
-                    <li class="list-group-item list-group-item-dark">
+                    <li class="list-group-item list-group-item-dark title-list">
                         {{ key.name }}
                     </li>
                     <li class="list-group-item">
