--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -25,7 +25,7 @@
         {% for key, value in todo_dict.items %}
             <div class="wrapper_board">
                 <ul class="list-group">
-                    <li class="list-group-item list-group-item-dark">
+                    <li class="list-group-item list-group-item-dark title-list">
 
                         <form action="{% url 'delete_board' pk=key.id %}" method="post">
                             {% csrf_token %}
