--- a/todolist/static/css/styles.css
+++ b/todolist/static/css/styles.css
@@ -1,4 +1,3 @@
-
 .center {
     margin: auto;
     padding: 10px;
@@ -25,7 +24,6 @@
 .dropdown-menu.show {
     min-width: 100% !important;
     width: 100% !important;
-
 }
 
 ul.list-group {
@@ -33,22 +31,16 @@ ul.list-group {
     margin-right: 2px;
     margin-left: 7px;
     height: 100ch;
-
-
 }
 
 div.wrapper_board {
     display: inline-block;
-
-
 }
 
 div.custom_scrollable {
 
     overflow: auto;
     white-space: nowrap;
-
-
 }
 
 .form-inline {
@@ -59,14 +51,20 @@ div.custom-form {
     align-self: center;
 }
 
-img.custom-img{
+img.custom-img {
     width: 20em;
 }
-ul.images-list{
-    list-style-type:none;
+
+ul.images-list {
+    list-style-type: none;
     text-align: center;
 }
-li.title-list{
-    text-align: center;
 
+li.title-list {
+    text-align: center;
+}
+
+div.center-big {
+    margin: auto;
+    padding: 5em;
 }
