--- a/todolist/templates/base_generic.html
+++ b/todolist/templates/base_generic.html
@@ -28,20 +28,32 @@
     {% block topbar %}
         <ul class="nav justify-content-end">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'todo' %}">To Do List</a>
+                <a class="nav-link" href="{% url 'todo' %}">
+                    <button class="btn btn-light my-2 my-sm-0" type="submit">To Do List</button>
+                </a>
             </li>
             {% if user.is_authenticated %}
                 <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="get">
                     <input name="searched_item" class="form-control mr-sm-2" type="search" placeholder="Search User"
                            aria-label="Search">
-                    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-light my-2 my-sm-0" type="submit">Search</button>
                 </form>
-                <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
-                    {{ user.get_username }}
-                </a></li>
-                <li><a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'todo' %}" tabindex="-1" aria-disabled="true">
+                        <button class="btn btn-light my-2 my-sm-0">{{ user.get_username }}</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">
+                        <button class="btn btn-light my-2 my-sm-0">Logout</button>
+                    </a>
+                </li>
             {% else %}
-                <li><a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                <li>
+                    <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">
+                        <button class="btn btn-light my-2 my-sm-0">Login</button>
+                    </a>
+                </li>
 
             {% endif %}
         </ul>
