--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -15,9 +15,9 @@
     <form class="form-inline" action="{% url 'add_board' %}" method="post">
         {% csrf_token %}
         {{ board_form }}
-        <button type="submit" class="btn btn-outline-dark">Add List</button>
+        <button type="submit" class="btn btn-light btn-outline-dark">Add List</button>
         <a href="{% url 'set_background' %}">
-            <button type="button" class="btn btn-outline-dark">Set Background</button>
+            <button type="button" class="btn btn-light btn-outline-dark">Set Background</button>
         </a>
     </form>
     <br>
