--- a/todolist/templates/base_generic.html
+++ b/todolist/templates/base_generic.html
@@ -13,6 +13,8 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.6, maximum-scale=1.0, user-scalable=no"/>
+
     <title>Dashboard</title>
 
     {% load static %}
